Leave margin-bottom as it is, because people alway have issues with their missing margins of <p> elements

--- a/templates/carl_contest/style.css
+++ b/templates/carl_contest/style.css
@@ -241,7 +241,7 @@ a.homelink2, a.homelink2:hover, a.homelink2:link, a.homelink2:visited, #serendip
 
 /* additional styles used for entry text */
 .serendipity_entry p {
-	margin: 0px;
+	margin-top: 0px;
 	padding-bottom: 0px; }
 
 /* style for extended body */
