--- a/templates/default-rtl/style.css
+++ b/templates/default-rtl/style.css
@@ -282,7 +282,7 @@ div.serendipitySideBarItem {
     cursor: pointer;
 }
 .serendipity_entry p {
-    margin: 0px;
+    margin-top: 0px;
     padding-bottom: 0px;
 }
 
