--- a/templates/default/style.css
+++ b/templates/default/style.css
@@ -281,7 +281,7 @@ div.serendipitySideBarItem {
     cursor: pointer;
 }
 .serendipity_entry p {
-    margin: 0px;
+    margin-top: 0px;
     padding-bottom: 0px;
 }
 
