--- a/templates/mt3-chalkboard/style.css
+++ b/templates/mt3-chalkboard/style.css
@@ -337,7 +337,7 @@ td.serendipity_admin_list_item {
 }
 
 .serendipity_entry p {
-    margin: 0px;
+    margin-top: 0px;
     padding-bottom: 10px;
 }
 
